Refactor ErrorFixingConcreteExpressionVisitor